@@ -81,6 +81,8 @@ public:
 	/// @see ConfigHandler::ConfigNotifyCallback
 	void ConfigNotify(const std::string& key, const std::string& value);
 
+	bool GetSelectionBoxVertices(float3& bl, float3& br, float3& tl, float3& tr) const;
+
 private:
 	void SetCursor(const std::string& cmdName, const bool forceRebind = false);
 
