@@ -35,6 +35,7 @@ class LuaUnsyncedRead {
 		static int GetScreenGeometry(lua_State* L);
 		static int GetMiniMapGeometry(lua_State* L);
 		static int GetMiniMapDualScreen(lua_State* L);
+		static int GetSelectionBox(lua_State* L);
 		static int IsAboveMiniMap(lua_State* L);
 
 		static int IsAABBInView(lua_State* L);
